# daangn-BE

./: .gitignore  README.md  certbot-renew.sh  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  dev-check.yml  pr-check.yml
django/: Dockerfile  manage.py
django/a_apis/: admin.py  apps.py  consumers.py  middleware.py  routing.py
django/a_apis/CRUD/: userCRUD.py
django/a_apis/api/: api.py  auth.py  chat.py  health.py  legal.py  products.py  region.py  users.py
django/a_apis/auth/: bearer.py  cookies.py  decorators.py  jwt_middleware.py
django/a_apis/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_chatroom_chatmessage_chatroomparticipant.py  0005_productcategory_product_category.py  0006_product_buyer_product_completed_at_and_more.py  0007_mannerratingtype_priceoffer_trade_tradeappointment_and_more.py  0008_product_region.py  0009_alter_product_status.py
django/a_apis/models/: __init__.py  chat.py  email_verification.py  files.py  product.py  region.py  trade.py
django/a_apis/schema/: auth.py  chat.py  products.py  region.py  users.py
django/a_apis/service/: auth.py  chat.py  email.py  files.py  products.py  region.py  users.py
django/a_apis/tests/: test_chat.py  test_keyword_mapping.py  test_products.py  test_sgis.py  test_sgis_live.py  test_users.py
django/a_common/: apps.py  models.py
django/a_core/: asgi.py  urls.py  wsgi.py
django/a_core/settings/: base.py  dev-aws.py  development.py  product.py  s3-development.py
django/a_user/: admin.py  models.py
django/a_user/migrations/: 0001_initial.py  (+1 more)
nginx/: nginx.conf
(+4 files in other folders)
